--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
+  "name": "nuevo-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index-server.js",
+
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
